--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
 
 .App-header {
   background-color: #282c34;
@@ -29,4 +25,35 @@
   to {
     transform: rotate(360deg);
   }
+}
+h1 {
+  font-family: 'Righteous', cursive;  
+  font-size: 70px;
+}
+
+h2 {
+  font-family: 'Righteous', cursive;
+  font-size: 50px;
+  color: white;
+  background: black; 
+}
+
+.inputs {
+  background: black;
+  color:white;
+  font-size: 12px;
+  
+}
+/* *{
+  box-sizing: border-box;
+} */
+.gifs {
+  width: 500px;
+  height: 300px;
+  margin: 40px auto;
+}
+
+.gifs > img {
+  width: 100%;
+  height: 100%;
 }
